fix: blog cards overflow

--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -55,7 +55,6 @@
   width: 100%;
   height: 100%;
   max-width: 285px;
-  max-height: 300px;
   padding-top: 66px;
   background-color: var(--bg-blog-content);
 
@@ -98,7 +97,6 @@
   display: flex;
   grid-column: 1;
   height: 100%;
-  max-height: 300px;
 
   @media (max-width: 1023px) {
     grid-column: unset;
@@ -108,7 +106,6 @@
     width: 100%;
     height: 100%;
     max-width: 285px;
-    max-height: 300px;
   }
 }
 
@@ -128,7 +125,6 @@
     width: 100%;
     height: 100%;
     max-width: 285px;
-    max-height: 300px;
   }
 }
 
@@ -137,7 +133,6 @@
   grid-column: 2;
   grid-row: span 2;
   height: 100%;
-  max-height: 630px;
 
   @media (max-width: 1023px) {
     grid-column: unset;
@@ -149,11 +144,6 @@
     width: 100%;
     height: 100%;
     max-width: 570px;
-    max-height: 630px;
-
-    @media (max-width: 1023px) {
-      max-height: 300px;
-    }
   }
 
   .blog__content {
@@ -161,7 +151,7 @@
     right: 0;
     bottom: 0;
     width: 50%;
-    height: 50%;
+    height: 48%;
 
     @media (max-width: 1023px) {
       position: static;
@@ -176,7 +166,6 @@
   grid-column: 1;
   grid-row: span 2;
   height: 100%;
-  max-height: 630px;
 
   @media (max-width: 1023px) {
     grid-column: unset;
@@ -192,11 +181,6 @@
     width: 100%;
     height: 100%;
     max-width: 570px;
-    max-height: 630px;
-
-    @media (max-width: 1023px) {
-      max-height: 300px;
-    }
   }
 
   .blog__content {
@@ -204,7 +188,7 @@
     right: 0;
     bottom: 0;
     width: 50%;
-    height: 50%;
+    height: 48%;
 
     @media (max-width: 1023px) {
       position: static;
@@ -217,20 +201,17 @@
 .blog__list > :nth-child(6n+5) {
   display: flex;
   height: 100%;
-  max-height: 300px;
 
   img {
     width: 100%;
     height: 100%;
     max-width: 285px;
-    max-height: 300px;
   }
 }
 
 .blog__list > :nth-child(6n+6) {
   display: flex;
   height: 100%;
-  max-height: 300px;
 
   .blog__image {
     order: 2;
@@ -240,7 +221,6 @@
     width: 100%;
     height: 100%;
     max-width: 285px;
-    max-height: 300px;
   }
 }
 
@@ -268,7 +248,6 @@
 
     .blog__content {
       max-width: 100%;
-      min-height: 256px;
     }
   }
 }
